@@ -7,28 +7,30 @@ DIST buildkernel-b2-1.0.2.tar.gz 21688 SHA256 f1a6792c64174b434f80afb9b134085b08
 DIST buildkernel-b2-1.0.3.tar.gz 21698 SHA256 48c4e9f70b7bbb4f57e13c0cdad7adc31594a38dd050a5a2e1bbf3c4583caab8 SHA512 7a524a61bd2393c5082928cc84e597da075a705b4af642cad5a97403d7659dd3d7b7a53e493d0f5cd8e26d0fa255fa1fbcb6b08004f7bd0fcb60a87989efbdff WHIRLPOOL 403b4b425358651614b410945f422fc00276c8573e7c343d31b4db269dcc116390b4fac810f678572fe5c20089058132f594fb624728a7e93cb2c6971db74a1d
 DIST buildkernel-b2-1.0.4.tar.gz 21710 SHA256 71db94e1a5a303aae1dd1e625db8190643fe5386f3659f2bd719c3a704229532 SHA512 2f8d81bf8a8827e4a4e917a16b22b25e77de057d27430e012981def2f39895f0b2d27425c25eeb28bd9f5d56a33a3d7880eba3113d48cfcf4204063bc85db5f7 WHIRLPOOL cb39efe9b6c2e9039288ec427db33abf5b702aa730939185a4854e4591fa6bd4ea2a2be430736257229b681c4a18ad4a6dbd53f9ccd479a4034820b2a27956d9
 DIST buildkernel-b2-1.0.5.tar.gz 21912 SHA256 5284e4f5effa3dc49abc1ff5cb17d4b22e90e57b3c0bdacfc29fd09459c4f8f5 SHA512 955691d9de61edff3e7a9b1208efce928f1a45ca43dd2f126bc0ca445fbc223219bc9da46a768ff2edbb902eeff686508aa7f1801b22903609a920303d26449c WHIRLPOOL e86c6f2d1256aedb321443469398c2807c879001eecd23821ec419203dacdc264c078fb857bd04b09a7b82b09693fde4dab5b3d4585fb1fb33e2c69b40d6d2c6
+DIST buildkernel-b2-1.0.6.tar.gz 21913 SHA256 523cd946345f014e2460c9a759b4fa27215c27ed3bd86a3094638485e21ed5ee SHA512 b139f986d9ee0c69278d80b168c2aaec0b3919f0a6616ba0bd5d0c93693af1e8c58b6fc907586f70df84f8a59a37457efd2f784d8d90de68ba8335baa826156b WHIRLPOOL e5337cbb08b70fb8837d9b0805ea595c753e5798d330f41304720220c3631d8a64bbfb7769205d10e093c441cfc4b1a1ff3bbd1b7acf4266cd47919553316158
 EBUILD buildkernel-b2-1.0.0.ebuild 717 SHA256 fa3648611eceb028475e0d44f0cb8af5ed9437cb4bc59e5f9562dcd55dbcf102 SHA512 c1c05e0d7ede0fc7da67963c7fb3e08c6b9906d6532d8b9919359d1f59c7d3032408bf7ccfdf44d9672ee7ffec16a04584305c1c9e6482bda5a00edaab6aed24 WHIRLPOOL 325c763e620b2257217a591061126c41e7f3a7bdedaa406c71b910fd9f49fb30f9a2c3fd1c4f1b46d1d66227245850a589a7543f95d9bd72842880e0fd60280b
 EBUILD buildkernel-b2-1.0.1.ebuild 717 SHA256 fa3648611eceb028475e0d44f0cb8af5ed9437cb4bc59e5f9562dcd55dbcf102 SHA512 c1c05e0d7ede0fc7da67963c7fb3e08c6b9906d6532d8b9919359d1f59c7d3032408bf7ccfdf44d9672ee7ffec16a04584305c1c9e6482bda5a00edaab6aed24 WHIRLPOOL 325c763e620b2257217a591061126c41e7f3a7bdedaa406c71b910fd9f49fb30f9a2c3fd1c4f1b46d1d66227245850a589a7543f95d9bd72842880e0fd60280b
 EBUILD buildkernel-b2-1.0.2.ebuild 717 SHA256 fa3648611eceb028475e0d44f0cb8af5ed9437cb4bc59e5f9562dcd55dbcf102 SHA512 c1c05e0d7ede0fc7da67963c7fb3e08c6b9906d6532d8b9919359d1f59c7d3032408bf7ccfdf44d9672ee7ffec16a04584305c1c9e6482bda5a00edaab6aed24 WHIRLPOOL 325c763e620b2257217a591061126c41e7f3a7bdedaa406c71b910fd9f49fb30f9a2c3fd1c4f1b46d1d66227245850a589a7543f95d9bd72842880e0fd60280b
 EBUILD buildkernel-b2-1.0.3.ebuild 717 SHA256 fa3648611eceb028475e0d44f0cb8af5ed9437cb4bc59e5f9562dcd55dbcf102 SHA512 c1c05e0d7ede0fc7da67963c7fb3e08c6b9906d6532d8b9919359d1f59c7d3032408bf7ccfdf44d9672ee7ffec16a04584305c1c9e6482bda5a00edaab6aed24 WHIRLPOOL 325c763e620b2257217a591061126c41e7f3a7bdedaa406c71b910fd9f49fb30f9a2c3fd1c4f1b46d1d66227245850a589a7543f95d9bd72842880e0fd60280b
 EBUILD buildkernel-b2-1.0.4.ebuild 717 SHA256 fa3648611eceb028475e0d44f0cb8af5ed9437cb4bc59e5f9562dcd55dbcf102 SHA512 c1c05e0d7ede0fc7da67963c7fb3e08c6b9906d6532d8b9919359d1f59c7d3032408bf7ccfdf44d9672ee7ffec16a04584305c1c9e6482bda5a00edaab6aed24 WHIRLPOOL 325c763e620b2257217a591061126c41e7f3a7bdedaa406c71b910fd9f49fb30f9a2c3fd1c4f1b46d1d66227245850a589a7543f95d9bd72842880e0fd60280b
 EBUILD buildkernel-b2-1.0.5.ebuild 717 SHA256 fa3648611eceb028475e0d44f0cb8af5ed9437cb4bc59e5f9562dcd55dbcf102 SHA512 c1c05e0d7ede0fc7da67963c7fb3e08c6b9906d6532d8b9919359d1f59c7d3032408bf7ccfdf44d9672ee7ffec16a04584305c1c9e6482bda5a00edaab6aed24 WHIRLPOOL 325c763e620b2257217a591061126c41e7f3a7bdedaa406c71b910fd9f49fb30f9a2c3fd1c4f1b46d1d66227245850a589a7543f95d9bd72842880e0fd60280b
-MISC ChangeLog 874 SHA256 99992dcc2c28ac3a9ccf5b6449c3bd35d7bedaeb9c1d3906b504c5e642ec046d SHA512 0c82eb63f8486566426af47d1f27b08905bf9d5a266c66a60eb0fbf769814f13850e9fcee882d66b732b5714237d9f3e32f831613a736065e7de80b0272b51ae WHIRLPOOL cd31680934c0cf0c7436ceaaa12f38b991f85b16f87f411cc786ce501c4dfe4b2809cc23f67f805ed2ca091942df327240b0c0c890443837bf36a3950d91cd1d
+EBUILD buildkernel-b2-1.0.6.ebuild 717 SHA256 fa3648611eceb028475e0d44f0cb8af5ed9437cb4bc59e5f9562dcd55dbcf102 SHA512 c1c05e0d7ede0fc7da67963c7fb3e08c6b9906d6532d8b9919359d1f59c7d3032408bf7ccfdf44d9672ee7ffec16a04584305c1c9e6482bda5a00edaab6aed24 WHIRLPOOL 325c763e620b2257217a591061126c41e7f3a7bdedaa406c71b910fd9f49fb30f9a2c3fd1c4f1b46d1d66227245850a589a7543f95d9bd72842880e0fd60280b
+MISC ChangeLog 1015 SHA256 c4e20b952f5e05bdbbb177aff61710c56386395e17583f71b47d7ffde8a22cd4 SHA512 ef8f9e0e649d9d76ee15ccfbd4cc1ed33f9d2e4e825045da6dd0ebd03277ec23c5a2bd20dcc4f1a363b99f2213d250483c9240e8418352d22f6a0e8cae64502d WHIRLPOOL a79b5c3249d42331ec07b17acb481946da8567df5dfd6ed00c257b454f743ef9d213df97430b6e9c9835970a07a09ef2e3f39bf91eb4f6bda2ce67dac7a31d1d
 MISC metadata.xml 677 SHA256 7376f9667734790ff24118e33b1d906c472a4e191ab83ac2c85dbdbaae9c05c1 SHA512 dc5e32a202d802f883428aba344e9d321c3b80efe633ff159dbee62e985b16bd2249cac81707617782374026f97d67299db951bdd3cc14e6fb01a5092e708d1b WHIRLPOOL 00a8ceb8b9ca162aab74558a7108c54e371851f7185d31fef36e80e64f8c1c015f9489b13fc753339edff50777143af055a4a5fd4af690fe5537fe60b24063da
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVqmQRAAoJEDHIDbLd52zqoOQP/2lEzkjr8q/KSCPfd6+lLFbr
-SFPA+IrKXsuffnXa5CE603+thskSxso1irAELarimlzZD0I9gsgx/dNdGXOrTXxo
-nrT1mWzB1DRIDWQKeFyx7xGk78nlKTk3YsB0q+bbAG+w0neRrBJFGo+1FdKRThcz
-BED7QYYUv2GhepRS+56ho2v7Z1yjVvRE21rLkR52G7RJz2xXpWuRqjqur0wdJ+z4
-Zb1hKm9C71QC8CTiynj/s8Vd/g+qGhg9AGsGtb2s41plmh6ZAVWcWDhSUF5lr07a
-NqRcmvCHmEYHmjlXSjFrUKIcanPxM7M5ShqQdXV38aeNcIVEnW2jbK2TMsbHLfvE
-1+GKF5m4EzAEp+OSaqIRYCDOgh5dCyexDI5yJxNGvLz5EKH69bExLES1QopqHSeN
-ee7jxkV1KN5qHJtNmAI9ahiWGZ7RJBjF/WEC3Hgf6mUKVhi0zo0gILm9eixXFTwd
-/wSTXbp6/pWm7t5/UH+HfE1/nqdheaDqtC/htSLab9vTvLltc1/7LzOa2lhs6Q0A
-xu8oCIX4cao0oe0DyelVlZIzJXMaEU1ZOF+2OKXHZzOTg8c/qI+gfcpdPX0M2TJj
-57x/9MRK5ty9dGyG3TExoyaPwV453/a1mm+VUuqAzxoB+dyoJQkKVZHzVwC1iNtR
-jT3NiAdZrBPvr8bmAigF
-=gplO
+iQIcBAEBCAAGBQJVqnN8AAoJEDHIDbLd52zqS8YQAIBKiXYaI2embsSLN9CL/0bD
+gg3a/S57bNoDRyMNvwQObGO+nnljeOpUug9M4WLVOx4Xev3f3gn8cwW54mI0EJGK
+jjQfLu0fSEYKEP4XV4h9BbuE+LF1iLk8LvoJVn6sBRPxtWdA4Gf70Rsu70fzABJw
+gsevT1nNf5HNilt2DqaczNq3rWE4ruPLfns/NbVZpiO+/k5H97JV2byQI7prHTau
+9lyuiAzBb4089E49a6W9ty6uyctBwnq81W8Pr38cNZh01xaaA/rMAIUxElBqEhXR
+gMvpNqC3YQm6dRoDB8E8+SkIczPXHC2vokgYE86Kg345dJHgUWfo+XLP0zYmUNGq
+SAu0r8sw+gwwDOb8z0STY2FA+ySpQW6+Ipq518Jy8fuUyj3VSL/o4qU9ytlPb0Ca
+tToG7mVyvrV7GJDn12bwVDfNkoWAVafWB+p7SFyaZQWO3znRt8QzkGMgEcimnI+u
+lGHvgElF8gQE3PUNAJ7/vuJwUph+D8/D8Eh9vi9w+HIDhZdNUQrXgOADPr6OOzuk
+P+NHa4QbrCW2EpDl0rR4rNnSeV7zuyim2lOlpamWuKwpbYKtopzjrqSw0lWyAuXl
+nrJO7+7itHp5DAu6V1xhaLrIsp/lBm8ULOQR7xjDEJe+1OCl+KhcoKHZNI1gPBdR
+fexCLL0uU/GYcupcznmi
+=nDEm
 -----END PGP SIGNATURE-----
