@@ -2,6 +2,11 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*buildkernel-b2-1.0.6 (18 Jul 2015)
+
+  18 Jul 2015; sakaki <sakaki@deciban.com> +buildkernel-b2-1.0.6.ebuild:
+  Fix incorrect itb filename.
+
 *buildkernel-b2-1.0.5 (18 Jul 2015)
 
   18 Jul 2015; sakaki <sakaki@deciban.com> +buildkernel-b2-1.0.5.ebuild:
